# hdx-scraper-portwatch

./: README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/portwatch/: __main__.py  pipeline.py
src/hdx/scraper/portwatch/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_pipeline.py
tests/fixtures/input/: aruba-daily-port-activity-data-and-trade-estimates.csv  chokepoints.csv  chokepoints.geojson  chokepoints.json  daily-chokepoint-transit-calls-and-trade-volume-estimates.csv  daily_chokepoints.json  daily_ports.json  disruptions.csv  ports.csv  ports.geojson  ports.json
