#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-portwatch"
requires-python = ">=3.13"
dependencies = [
  "freezegun",
  "hdx-python-api",
  "hdx-python-country",
  "hdx-python-utilities",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.portwatch.__main__:main"
